[gd_scene load_steps=21 format=3 uid="uid://xqds4eqa4fys"]

[ext_resource type="Script" uid="uid://bkpen13pay85m" path="res://scripts/section.gd" id="1_fivou"]
[ext_resource type="PackedScene" uid="uid://bekjel2ayhsva" path="res://scenes/level_barrier.tscn" id="2_fivou"]
[ext_resource type="Material" uid="uid://dw536siyh8hrk" path="res://materials/backgrounds/bg_loop.tres" id="2_ms04e"]
[ext_resource type="ArrayMesh" uid="uid://gw7pdmvoe3yh" path="res://meshes/gestein_v003.obj" id="5_ti0g3"]
[ext_resource type="Material" uid="uid://dv7qrtiq87nj0" path="res://materials/walls/walls.tres" id="6_ms04e"]
[ext_resource type="ArrayMesh" uid="uid://c54e8dk8jsryd" path="res://meshes/vains_v003.obj" id="7_58ehv"]
[ext_resource type="Material" uid="uid://bupgrlcbs4i6k" path="res://materials/walls/veins.tres" id="7_ti0g3"]

[sub_resource type="QuadMesh" id="QuadMesh_o3jxj"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ms04e"]
render_priority = 1
transparency = 1
albedo_color = Color(0.0627451, 0.243137, 0.368627, 0.862745)

[sub_resource type="BoxShape3D" id="BoxShape3D_t8qun"]
size = Vector3(4.19824, 19.4489, 13.8901)

[sub_resource type="Curve" id="Curve_ti0g3"]
_limits = [-1.0, 1.0, -1.0, 1.0]
_data = [Vector2(-1, -0.428571), 0.0, 0.0, 0, 0, Vector2(4.47035e-08, 1), 0.0, 0.0, 0, 0, Vector2(1, -0.428571), 0.0, 0.0, 0, 0]
point_count = 3
metadata/_snap_enabled = true
metadata/_snap_count = 14

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_ms04e"]
curve_x = SubResource("Curve_ti0g3")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ti0g3"]
emission_shape_offset = Vector3(0, 0, -3.275)
emission_shape = 3
emission_box_extents = Vector3(6.595, 4.96, 3)
spread = 0.0
directional_velocity_min = 0.999984
directional_velocity_max = 1.99998
directional_velocity_curve = SubResource("CurveXYZTexture_ms04e")
gravity = Vector3(0, 0.5, 0)
linear_accel_min = -0.200002
linear_accel_max = 2.0
scale_min = 0.0
scale_max = 0.05

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ti0g3"]
transparency = 1
albedo_color = Color(1, 1, 1, 0.517647)
roughness = 0.0
rim = 0.0
rim_tint = 0.0

[sub_resource type="SphereMesh" id="SphereMesh_ms04e"]
material = SubResource("StandardMaterial3D_ti0g3")

[sub_resource type="Curve" id="Curve_ms04e"]
_limits = [0.0, 100.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_58ehv"]
curve = SubResource("Curve_ms04e")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_70rpc"]
lifetime_randomness = 0.15
emission_shape_offset = Vector3(0, 0, -3.275)
emission_shape = 3
emission_box_extents = Vector3(6.595, 4.96, 3)
gravity = Vector3(0, -1, 0)
damping_curve = SubResource("CurveTexture_58ehv")
scale_min = 0.01
scale_max = 0.02
anim_speed_max = 1.55
turbulence_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_58ehv"]
transparency = 1
albedo_color = Color(1, 1, 1, 0.552941)

[sub_resource type="PrismMesh" id="PrismMesh_ocpc0"]
material = SubResource("StandardMaterial3D_58ehv")
size = Vector3(0.7, 0.7, 0.7)

[node name="Section" type="Node3D" node_paths=PackedStringArray("spawn_marker_a", "spawn_marker_b")]
script = ExtResource("1_fivou")
spawn_marker_a = NodePath("SpawnerA")
spawn_marker_b = NodePath("SpawnerB")

[node name="Background" type="MeshInstance3D" parent="."]
transform = Transform3D(25, 0, 0, 0, 25, 0, 0, 0, 1, -15.293, 0, -3.007)
mesh = SubResource("QuadMesh_o3jxj")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("2_ms04e")

[node name="RightBarrier" parent="." instance=ExtResource("2_fivou")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0240569, 0, -0.819179)
visible = false

[node name="LeftBarrier" parent="." instance=ExtResource("2_fivou")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -29.94, 0, -0.812)
visible = false

[node name="VisibleOnScreenNotifier" type="VisibleOnScreenNotifier3D" parent="."]
aabb = AABB(-30, -12.5, -3, 30, 25, 5)

[node name="SpawnerA" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -23.8985, 9.53181, 0)

[node name="SpawnerB" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.71813, -11.169, 0)

[node name="LeftWall" type="StaticBody3D" parent="."]
transform = Transform3D(0.917378, 0, -0.492565, 0, 1.36003, 0, 0.458728, 0, 0.985046, -30.8771, 1.37305, 1.14596)

[node name="Node3D2" type="Node3D" parent="LeftWall"]
transform = Transform3D(1, 0, -2.98023e-08, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="Gestein" type="MeshInstance3D" parent="LeftWall/Node3D2"]
transform = Transform3D(1, 0, 2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 0, 0, 0)
material_overlay = SubResource("StandardMaterial3D_ms04e")
mesh = ExtResource("5_ti0g3")
skeleton = NodePath("../../..")
surface_material_override/0 = ExtResource("6_ms04e")

[node name="Veins" type="MeshInstance3D" parent="LeftWall/Node3D2"]
transform = Transform3D(1, 0, 2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 0, 0, 0)
mesh = ExtResource("7_58ehv")
surface_material_override/0 = ExtResource("7_ti0g3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="LeftWall"]
transform = Transform3D(1, 0, -5.96046e-08, 0, 1, 0, 0, 0, 1, 1.57438, -0.818055, 0.261556)
shape = SubResource("BoxShape3D_t8qun")

[node name="LeftWall2" type="StaticBody3D" parent="."]
transform = Transform3D(-0.840678, 0, -0.630943, 0, 1.36003, 0, 0.5876, 0, -0.902689, 2.58816, 1.37305, 1.14596)

[node name="Node3D2" type="Node3D" parent="LeftWall2"]
transform = Transform3D(1, 0, -2.98023e-08, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="Gestein" type="MeshInstance3D" parent="LeftWall2/Node3D2"]
transform = Transform3D(1, 0, 2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 0, 0, 0)
material_overlay = SubResource("StandardMaterial3D_ms04e")
mesh = ExtResource("5_ti0g3")
skeleton = NodePath("../../..")
surface_material_override/0 = ExtResource("6_ms04e")

[node name="Veins" type="MeshInstance3D" parent="LeftWall2/Node3D2"]
transform = Transform3D(1, 0, 2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 0, 0, 0)
mesh = ExtResource("7_58ehv")
surface_material_override/0 = ExtResource("7_ti0g3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="LeftWall2"]
transform = Transform3D(1, 0, -5.96046e-08, 0, 1, 0, 0, 0, 1, 1.57438, -0.818055, 0.261556)
shape = SubResource("BoxShape3D_t8qun")

[node name="FishRespawnTimer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="Bubbles" type="GPUParticles3D" parent="."]
transform = Transform3D(2.655, 0, 0, 0, 3.31466, 0, 0, 0, 1.308, -11.9884, -1.03899, 3.67558)
amount = 400
lifetime = 3.0
randomness = 0.23
process_material = SubResource("ParticleProcessMaterial_ti0g3")
draw_pass_1 = SubResource("SphereMesh_ms04e")

[node name="Debris" type="GPUParticles3D" parent="."]
transform = Transform3D(2.655, 0, 0, 0, 3.31466, 0, 0, 0, 1.308, -11.9884, -1.03899, 3.67558)
amount = 5000
lifetime = 3.0
randomness = 0.23
process_material = SubResource("ParticleProcessMaterial_70rpc")
draw_pass_1 = SubResource("PrismMesh_ocpc0")

[connection signal="screen_entered" from="VisibleOnScreenNotifier" to="." method="screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier" to="." method="screen_exited"]
[connection signal="timeout" from="FishRespawnTimer" to="." method="respawn_timer_expired"]
